catch_panic/ui_tests/fail/no_jni_env.rs
use catch_panic::catch_panic;

#[catch_panic]
fn no_jni_env() {
    panic!();
}

fn main() {}
