catch_panic/ui_tests/fail/no_jni_env.stderr
error: #[catch_panic] requires that this function has at least one argument of type jni::JNIEnv
 --> ui_tests/fail/no_jni_env.rs:4:1
  |
4 | fn no_jni_env() {
  | ^^
